force-app/main/default/objects/Catalog_Entry__mdt/Catalog_Entry__mdt.object-meta.xml
<CustomObject>
    <label>Catalog Entry</label>
    <pluralLabel>Catalog Entries</pluralLabel>
    <description>Metadata mapping Interfaces to Factories and Implementations</description>
</CustomObject>