force-app/main/default/objects/Catalog_Entry__mdt/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>