force-app/main/default/objects/Catalog_Entry__mdt/fields/Singleton__c.field-meta.xml
<CustomField>
    <fullName>Singleton__c</fullName>
    <label>Singleton</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>